@@ -3,7 +3,6 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- go to next/prev line: inefficient
 - need distinct default styles for new token types
 - HTML mode: use new token types
 - synchro scroll & folding
@@ -122,7 +121,6 @@ and quirks that I need to fix eventually.
   - selected borders in list, tree, table wrong colors
 - evalutate for selected lines: > 1 selection per line
 - motif l&f: shortcuts in menu items
-- fix pg up/down with soft wrap
 
 + verify:
 
